Small, Medium or large game activity is started in depending of it's size selected in Welcome activity. Player number is sent to the new activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".game_activity.GameActivity">
+        <activity android:name=".game_activity.SmallGameActivity">
+        </activity>
+        <activity android:name=".game_activity.MediumGameActivity">
+        </activity>
+        <activity android:name=".game_activity.LargeGameActivity">
         </activity>
     </application>
 
