--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 23 10:57:53 EET 2018
-sdk.dir=/home/lorinczpeter94/Android/Sdk
+#Fri Nov 23 20:17:15 EET 2018
+sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\Sdk
