--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 25 22:50:16 EET 2018
-sdk.dir=/home/lorinczpeter94/Android/Sdk
+#Mon Nov 26 22:16:11 EET 2018
+sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\Sdk
