--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 27 07:07:12 EET 2018
-sdk.dir=/home/lorinczpeter94/Android/Sdk
+#Thu Nov 29 18:54:44 EET 2018
+sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\Sdk
