Code completely changed and refactored

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 29 18:54:44 EET 2018
-sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\Sdk
+#Fri Nov 30 15:18:58 EET 2018
+sdk.dir=/home/lorinczpeter94/Android/Sdk
