--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,28 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".welcome_activity.WelcomeActivity"
-                    android:screenOrientation="locked">
+        <activity
+                android:name=".welcome_activity.WelcomeActivity"
+                android:screenOrientation="locked">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".gameActivity.SmallGameActivity"
-                  android:screenOrientation="locked">
+        <activity
+                android:name=".gameActivity.SmallGameActivity"
+                android:screenOrientation="locked">
         </activity>
-        <activity android:name=".gameActivity.MediumGameActivity"
-                  android:screenOrientation="locked">
+        <activity
+                android:name=".gameActivity.MediumGameActivity"
+                android:screenOrientation="locked">
         </activity>
-        <activity android:name=".gameActivity.LargeGameActivity"
-                  android:screenOrientation="locked">
+        <activity
+                android:name=".gameActivity.LargeGameActivity"
+                android:screenOrientation="locked">
+        </activity>
+        <activity android:name=".login_activity.LoginActivity">
         </activity>
     </application>
 
