--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 09 20:44:22 EET 2018
-sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\Sdk
+#Mon Dec 10 18:09:27 EET 2018
+sdk.dir=/home/lorinczpeter94/Android/Sdk
