--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 10 18:09:27 EET 2018
-sdk.dir=/home/lorinczpeter94/Android/Sdk
+#Wed Apr 17 09:00:37 EEST 2019
+sdk.dir=C\:\\Users\\Chris\\AppData\\Local\\Android\\Sdk
